[project]
name = "meltano-hub"
version = "0.0.1"
description = "Meltano hub contains the definition of all meltano taps, targets, utilities, etc."
authors = [{ name = "Meltano Team" }]
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.17.3,<4.18",
    "ruamel.yaml>=0.18.6",
    "yamllint>=1.35.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.uv]
package = false
