[tool.poetry]
name = "hub-utils"
version = "0.1.0"
description = ""
authors = ["pnadolny13 <patnadolny@gmail.com>"]
readme = "README.md"
packages = [{include = "hub_utils"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
typer = {extras = ["all"], version = "^0.15.2"}
ruamel-yaml = "^0.18.10"
yamllint = "^1.36.2"
boto3 = "^1.37.13"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
tox = ">=4.13.0"
coverage = ">=7.6.1"
mypy = ">=1.8.0"
moto = ">=5.0.14"
typer-cli = ">=0.0.13"
ruff = ">=0.6.5"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle (error)
    "W",   # pycodestyle (warning)
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hub-utils = 'hub_utils.main:app'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]