[tool.poetry]
name = "hub-utils"
version = "0.1.0"
description = ""
authors = ["pnadolny13 <patnadolny@gmail.com>"]
readme = "README.md"
packages = [{include = "hub_utils"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
boto3 = "^1.40.12"
jsonpath-ng = "^1.7.0"
requests = "^2.32.4"
ruamel-yaml = "^0.18.14"
typer = "^0.16.1"
uv = "^0.8.11"
yamllint = "^1.37.1"

[tool.poetry.group.dev.dependencies]
coverage = ">=7.6.1"
moto = ">=5.0.14"
mypy = ">=1.8.0"
pytest = ">=7.1.3"
tox = ">=4.13.0"
typer-cli = ">=0.0.13"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle (error)
    "W",   # pycodestyle (warning)
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hub-utils = 'hub_utils.main:app'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
