[project]
name = "hub-utils"
version = "0.1.0"
description = ""
authors = [{ name = "pnadolny13", email = "patnadolny@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "boto3>=1.40.12,<2",
    "jsonpath-ng>=1.7.0,<2",
    "requests>=2.32.4,<3",
    "ruamel-yaml>=0.18.14,<0.19",
    "typer>=0.19.0,<0.20",
    "uv>=0.9,<0.10",
    "yamllint>=1.37.1,<2",
]

[project.scripts]
hub-utils = "hub_utils.main:app"

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "moto>=5.0.14",
    "mypy>=1.8.0",
    "pytest>=7.1.3",
    "tox>=4.13.0",
    "typer-cli>=0.0.13",
]

[tool.hatch.build.targets.sdist]
include = ["hub_utils"]

[tool.hatch.build.targets.wheel]
include = ["hub_utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle (error)
    "W",   # pycodestyle (warning)
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
