[project]
name = "hub-utils"
version = "0.1.0"
description = ""
authors = [{ name = "pnadolny13", email = "patnadolny@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "boto3~=1.42",
    "jsonpath-ng~=1.8",
    "requests~=2.32",
    "ruamel-yaml~=0.19",
    "typer~=0.24",
    "uv~=0.10",
    "yamllint~=1.38",
]

[project.scripts]
hub-utils = "hub_utils.main:app"

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "tox>=4.13.0",
    "typer-cli>=0.0.13",
]
testing = [
    "coverage>=7.6.1",
    "moto>=5.0.14",
    "pytest>=9",
]

[tool.hatch.build.targets.sdist]
include = ["hub_utils"]

[tool.hatch.build.targets.wheel]
include = ["hub_utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle (error)
    "W",   # pycodestyle (warning)
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

[tool.pytest]
minversion = "9"
addopts = [
    "-v",
    "-ra",
    "-q",
]
log_level = "INFO"
testpaths = [
    "tests"
]
